# ts-async-api

./: pyproject.toml
example/: notify-bot.py
scripts/: check.sh
src/ts3_bot/: __init__.py
src/ts_async_api/: __init__.py
src/ts_async_api/server_query/: __init__.py  client.py  exception.py  msg.py  utils.py
src/ts_async_api/server_query/cmd/: __init__.py  base.py  channelinfo.py  channellist.py  clientinfo.py  clientlist.py  login.py  servernotifyregister.py  use.py  version.py
src/ts_async_api/server_query/datatype/: __init__.py  _base.py  _channel.py  _client.py  pydantic.py
src/ts_async_api/server_query/event/: __init__.py  base.py  manager.py  notifychannelcreated.py  notifychanneldeleted.py  notifychanneldescriptionchanged.py  notifychanneledited.py  notifychannelmoved.py  notifychannelpasswordchanged.py  notifycliententerview.py  notifyclientleftview.py  notifyclientmoved.py  notifyserveredited.py  notifytextmessage.py
tests/ts_async_api/server_query/: test_msg.py  test_utils.py
tests/ts_async_api/server_query/cmd/: test_base.py
tests/ts_async_api/server_query/datatype/: test_channel.py  test_client.py
tests/ts_async_api/server_query/event/: test_event_base.py  test_notifycliententerview.py  test_notifyclientleftview.py  test_notifyclientmoved.py
