[project]
name = "ts-async-api"
version = "0.1.0"
description = "Teamspeak async api"
readme = "README.md"
authors = [{ name = "plusls", email = "plusls@qq.com" }]
requires-python = ">=3.12"
dependencies = ["pydantic~=2.10.3", "sortedcontainers>=2.4.0"]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "mypy>=1.17.0",
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.8.0",
    "sortedcontainers-stubs>=2.4.3",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ts_async_api"]

[tool.hatch.build.targets.sdist]
include = ["src/ts_async_api"]


[tool.uv]
managed = true

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
exclude = []

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "UP045",   # 允许使用 optional
    "ERA001",  # 允许注释的 python 代码
    "S101",    # 允许使用 assert
    "COM812",  # formatter 会强制 dict 末尾保留逗号, 不需要该规则
    "D400",    # 文档的第一行不需要 . 结尾
    "N818",    # 异常不一定要以 Error 结尾
    "ANN401",  # 允许使用 any
    "TID252",  # 允许从父模块导入
    "PLR0913", # 允许参数超过 5 个
    "PLR0911", # 允许 6 条以上的返回语句
    "FIX",     # 允许 TODO 等需要 FIX 的注释
    "TD003",   # 允许 TODO 后面不跟着 url
    "TRY002",  # 允许创建普通的 Exception,
    "RUF001",  # 允许字符串中使用全角符号
]
pydocstyle = { convention = 'numpy' }

[tool.ruff.lint.per-file-ignores]
"{tests}/**" = [
    "D",       # 测试可以不用写文档
    "INP",     # 测试不需要写 __init__.py
    "TRY002",  # 测试允许创建普通的 Exception
    "PLR2004", # 测试中允许使用 Magic value
]
"{example}/**" = [
    "INP",    # example 不需要写 __init__.py
    "TRY002", # example 允许创建普通的 Exception
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
exclude = []

[tool.mypy]
ignore_missing_imports = true
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = "pydantic.mypy"
exclude = []

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'function'
testpaths = [
    "tests", # 只运行 tests 目录下的测试
]
